:bug: fix: not sufficient contrast between new scroll background and text

--- a/src/user.css
+++ b/src/user.css
@@ -710,8 +710,8 @@ input,
 
   80%,
   100% {
-    -webkit-backdrop-filter: blur(var(--blur-2xl, 2rem)) brightness(75%);
-    backdrop-filter: blur(var(--blur-2xl, 2rem)) brightness(75%);
+    -webkit-backdrop-filter: blur(var(--blur-2xl, 2rem)) brightness(25%);
+    backdrop-filter: blur(var(--blur-2xl, 2rem)) brightness(25%);
   }
 }
 
